# Librova

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CodexSessionInstructions.md  Directory.Build.props  LibriFlow-Architecture-Master.md  LibriFlow.slnx  Librova.slnx  PLANS.md  README.md  Run-Librova.ps1  Run-Tests.ps1  vcpkg.json
apps/LibriFlow.Core.Host/: CMakeLists.txt  Main.cpp
apps/Librova.Core.Host/: CMakeLists.txt  Main.cpp
apps/Librova.Qt/: CMakeLists.txt  app.rc  main.cpp
apps/Librova.Qt/Adapters/: QtCatalogAdapter.cpp  QtCatalogAdapter.hpp  QtExportAdapter.cpp  QtExportAdapter.hpp  QtImportAdapter.cpp  QtImportAdapter.hpp  QtStringConversions.hpp  QtTrashAdapter.cpp  QtTrashAdapter.hpp
apps/Librova.Qt/App/: IBackendDispatcher.hpp  QtApplicationBackend.cpp  QtApplicationBackend.hpp  QtLaunchOptions.cpp  QtLaunchOptions.hpp  QtLogging.cpp  QtLogging.hpp  QtRuntimePaths.cpp  QtRuntimePaths.hpp  QtRuntimeWorkspaceMaintenance.cpp  QtRuntimeWorkspaceMaintenance.hpp  QtWindowsPlatform.cpp  QtWindowsPlatform.hpp
apps/Librova.Qt/Controllers/: ConverterValidationController.cpp  ConverterValidationController.hpp  FirstRunController.cpp  FirstRunController.hpp  PreferencesStore.cpp  PreferencesStore.hpp  ShellController.cpp  ShellController.hpp  ShellStateStore.cpp  ShellStateStore.hpp
apps/Librova.Qt/Models/: BookDetailsModel.cpp  BookDetailsModel.hpp  BookListModel.cpp  BookListModel.hpp  CollectionListModel.cpp  CollectionListModel.hpp  FacetListModel.cpp  FacetListModel.hpp  ImportJobListModel.cpp  ImportJobListModel.hpp
libs/App/: CLibraryApplication.cpp  CLibraryApplication.hpp  CMakeLists.txt  HostOptions.cpp  ILibraryApplication.hpp  ImportJobManager.cpp  ImportJobManager.hpp  ImportJobRunner.cpp  ImportJobRunner.hpp  ImportJobService.cpp  ImportJobService.hpp  ImportRollbackService.cpp  ImportRollbackService.hpp  ImportWorkloadPlanner.cpp  ImportWorkloadPlanner.hpp  LibraryBootstrap.cpp  LibraryBootstrap.hpp  LibraryCatalogFacade.cpp  LibraryCatalogFacade.hpp  LibraryExportFacade.cpp  LibraryExportFacade.hpp  LibraryImportFacade.cpp  LibraryImportFacade.hpp  LibraryTrashFacade.cpp  StructuredProgressMapper.cpp  StructuredProgressMapper.hpp
libs/Application/: CMakeLists.txt  ImportRollbackService.cpp  ImportRollbackService.hpp  ImportWorkloadPlanner.cpp  ImportWorkloadPlanner.hpp  LibraryCatalogFacade.cpp  LibraryCatalogFacade.hpp  LibraryExportFacade.cpp  LibraryExportFacade.hpp  LibraryImportFacade.cpp  LibraryImportFacade.hpp  LibraryTrashFacade.cpp  LibraryTrashFacade.hpp  StructuredProgressMapper.cpp  StructuredProgressMapper.hpp
libs/ApplicationClient/: CMakeLists.txt  ImportJobClient.cpp  ImportJobClient.hpp
libs/ApplicationJobs/: CMakeLists.txt  ImportJobService.cpp  ImportJobService.hpp
libs/BookDatabase/: CMakeLists.txt  SqliteBookQueryRepository.cpp  SqliteBookQueryRepository.hpp  SqliteBookRepository.cpp  SqliteBookRepository.hpp  SqliteGenreHelpers.cpp  SqliteGenreHelpers.hpp
libs/Converter/: CMakeLists.txt  ConverterCommandBuilder.cpp  ConverterCommandBuilder.hpp  ConverterConfiguration.cpp  ConverterConfiguration.hpp  ExternalBookConverter.cpp  ExternalBookConverter.hpp
libs/ConverterCommand/: CMakeLists.txt  ConverterCommandBuilder.cpp  ConverterCommandBuilder.hpp
libs/ConverterConfiguration/: CMakeLists.txt  ConverterConfiguration.cpp  ConverterConfiguration.hpp
libs/ConverterRuntime/: CMakeLists.txt  ExternalBookConverter.cpp  ExternalBookConverter.hpp
libs/CoreHost/: CMakeLists.txt  HostOptions.cpp  HostOptions.hpp  LibraryBootstrap.cpp  LibraryBootstrap.hpp
libs/CoverProcessingStb/: CMakeLists.txt  StbCoverImageProcessor.cpp  StbCoverImageProcessor.hpp
libs/CoverProcessingWic/: CMakeLists.txt  WicCoverImageProcessor.cpp  WicCoverImageProcessor.hpp
libs/Database/: CMakeLists.txt  DatabaseSchema.cpp  DatabaseSchema.hpp  SchemaMigrator.cpp  SchemaMigrator.hpp  SearchIndexMaintenance.cpp  SearchIndexMaintenance.hpp  SqliteBookCollectionRepository.cpp  SqliteBookCollectionRepository.hpp  SqliteBookQueryRepository.cpp  SqliteBookQueryRepository.hpp  SqliteBookRepository.cpp  SqliteBookRepository.hpp  SqliteConnection.cpp  SqliteEntityHelpers.cpp  SqliteEntityHelpers.hpp  SqliteGenreHelpers.cpp  SqliteGenreHelpers.hpp  SqliteStatement.cpp  SqliteTimePoint.cpp  SqliteTimePoint.hpp  SqliteTransaction.hpp
libs/DatabaseRuntime/: CMakeLists.txt  SchemaMigrator.cpp  SchemaMigrator.hpp
libs/EpubParsing/: CMakeLists.txt  EpubParser.cpp  EpubParser.hpp
libs/Fb2Parsing/: CMakeLists.txt  Fb2GenreMapper.cpp  Fb2GenreMapper.hpp  Fb2Parser.cpp  Fb2Parser.hpp
libs/Foundation/: CMakeLists.txt  FileSystemUtils.cpp  FileSystemUtils.hpp  Logging.cpp  Logging.hpp  Sha256.cpp  StringUtils.cpp  StringUtils.hpp  UnicodeConversion.cpp  Version.cpp  Version.hpp
libs/Hashing/: CMakeLists.txt  Sha256.cpp  Sha256.hpp
libs/Import/: CMakeLists.txt  ImportConversionPolicy.cpp  ImportDiagnosticText.cpp  ImportDiagnosticText.hpp  ImportDiagnostics.hpp  ImportPerfTracker.cpp  ImportSourceExpander.cpp  SingleFileImportCoordinator.cpp  SingleFileImportCoordinator.hpp  WriterDispatchingRepository.cpp  WriterDispatchingRepository.hpp  ZipImportCoordinator.cpp  ZipImportCoordinator.hpp
libs/ImportConversion/: CMakeLists.txt  ImportConversionPolicy.cpp  ImportConversionPolicy.hpp
libs/ImportSourceExpander/: CMakeLists.txt  ImportDiagnostics.hpp  ImportSourceExpander.cpp  ImportSourceExpander.hpp
libs/Importing/: CMakeLists.txt  ImportDiagnosticText.cpp  ImportDiagnosticText.hpp  ImportPerfTracker.cpp  ImportPerfTracker.hpp  ParallelImportHelpers.hpp  SingleFileImportCoordinator.cpp  SingleFileImportCoordinator.hpp  WriterDispatchingRepository.cpp  WriterDispatchingRepository.hpp
libs/Jobs/: CMakeLists.txt  ImportJobManager.cpp  ImportJobManager.hpp  ImportJobRunner.cpp  ImportJobRunner.hpp
libs/Logging/: CMakeLists.txt  Logging.cpp  Logging.hpp
libs/ManagedFileEncoding/: CMakeLists.txt  ManagedFileEncoding.cpp
libs/ManagedPaths/: CMakeLists.txt  ManagedPathSafety.cpp  ManagedPathSafety.hpp
(+470 files in other folders)
