cmake_minimum_required(VERSION 3.26)

file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.txt" LIBROVA_PRODUCT_VERSION LIMIT_COUNT 1)
string(STRIP "${LIBROVA_PRODUCT_VERSION}" LIBROVA_PRODUCT_VERSION)

project(Librova VERSION ${LIBROVA_PRODUCT_VERSION} LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(MSVC)
    add_compile_options(/utf-8)

    if(DEFINED VCPKG_TARGET_TRIPLET AND VCPKG_TARGET_TRIPLET MATCHES "-static$")
        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
    endif()
endif()

include(CTest)

add_subdirectory(libs/Domain)
add_subdirectory(libs/Application)
add_subdirectory(libs/ApplicationClient)
add_subdirectory(libs/ApplicationJobs)
add_subdirectory(libs/Core)
add_subdirectory(libs/Unicode)
add_subdirectory(libs/BookDatabase)
add_subdirectory(libs/ConverterCommand)
add_subdirectory(libs/ConverterConfiguration)
add_subdirectory(libs/ConverterRuntime)
add_subdirectory(libs/CoverProcessingWic)
add_subdirectory(libs/CoreHost)
add_subdirectory(libs/DatabaseSchema)
add_subdirectory(libs/DatabaseRuntime)
add_subdirectory(libs/EpubParsing)
add_subdirectory(libs/Fb2Parsing)
add_subdirectory(libs/ImportConversion)
add_subdirectory(libs/Importing)
add_subdirectory(libs/Jobs)
add_subdirectory(libs/Logging)
add_subdirectory(libs/ManagedPaths)
add_subdirectory(libs/ManagedFileEncoding)
add_subdirectory(libs/ManagedStorage)
add_subdirectory(libs/ManagedTrash)
add_subdirectory(libs/ParserRegistry)
add_subdirectory(libs/PipeClient)
add_subdirectory(libs/PipeTransport)
add_subdirectory(libs/PipeHost)
add_subdirectory(libs/ProtoContracts)
add_subdirectory(libs/ProtoMapping)
add_subdirectory(libs/ProtoServices)
add_subdirectory(libs/RecycleBin)
add_subdirectory(libs/SearchIndex)
add_subdirectory(libs/Sqlite)
add_subdirectory(libs/StoragePlanning)
add_subdirectory(libs/ZipImporting)
add_subdirectory(apps/Librova.Core.Host)
add_subdirectory(tests/Unit)
